# entropy_gated_branching

./: README.md  beam_search_vers.py  confidence_beam_search_vers.py  download_datasets.py  download_models.py  eval.py  evaluate.py  evaluate_entropy_ablation.py  paths.py  pyproject.toml  run_beam_search.py  run_beam_search_bs.sbatch  run_beam_search_egb.sbatch  run_beam_search_entropy_ablation.sbatch  run_beam_search_rlhflow_all.sbatch  run_budget_sweep.sbatch
