[project]
name = "entropy-gated-brancing"
version = "0.1.0"
description = "Entropy gated branching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "blobfile>=3.0.0",
    "ml-dtypes>=0.5.0",
    "jax[cuda12]",
    "plotly>=5.24.1",
    "rich>=13.9.3",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers==4.52.3",
    "tyro>=0.8.14",
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0; sys_platform != 'win32'",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "openai>=1.58.1",
    "pydantic>=2.10.4",
    "ipykernel>=6.29.5",
    "dspy>=2.6.27",
    "math-verify>=0.8.0",
    "matplotlib>=3.10.3",
    "bitsandbytes>=0.46.1",
    "pandas",
    "datasets"
]

[tool.setuptools.packages]
find = {} # Use auto-discovery within a src-layout